crates/rome_formatter/tests/specs/prettier/typescript/decorators-ts/angular.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: angular.ts

---
# Input
```js
@Component({
  selector: 'toh-hero-button',
  template: `<button>{{label}}</button>`
})
export class HeroButtonComponent {
  @Output() change = new EventEmitter<any>();
  @Input() label: string;
}

```

# Output
```js
@Component({
  selector: 'toh-hero-button',
  template: `<button>{{label}}</button>`
})
export class HeroButtonComponent {
  @Output() change = new EventEmitter<any>();
  @Input() label: string;
}

```

# Errors
```
error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
  ┌─ angular.ts:6:3
  │
6 │   @Output() change = new EventEmitter<any>();
  │   ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a class method body but instead found 'change'
  ┌─ angular.ts:6:13
  │
6 │   @Output() change = new EventEmitter<any>();
  │             ^^^^^^ Expected a class method body here

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
  ┌─ angular.ts:7:3
  │
7 │   @Input() label: string;
  │   ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a class method body but instead found 'label'
  ┌─ angular.ts:7:12
  │
7 │   @Input() label: string;
  │            ^^^^^ Expected a class method body here


```


